更新index.html，修改样式表和脚本文件的引用，使用index.css和index.js替代原有的file_reader.css和file_reader.js。

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>本地文件读写示例</title>
-    <link rel="stylesheet" href="file_reader.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
@@ -31,6 +31,6 @@
     <!-- Toast提示容器 -->
     <div id="toast" class="toast"></div>
 
-    <script src="file_reader.js"></script>
+    <script src="index.js"></script>
 </body>
 </html> 
