--- a/index.html
+++ b/index.html
@@ -7,25 +7,40 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container">
-        <h2>本地文件读写示例</h2>
+    <div class="app-container">
+        <div class="sidebar" id="sidebar">
+            <div class="sidebar-header">
+                <button id="openFolderBtn" class="sidebar-button">打开工作目录</button>
+                <div class="show-hidden-toggle">
+                    <label class="switch">
+                        <input type="checkbox" id="showHiddenFiles">
+                        <span class="slider"></span>
+                    </label>
+                    <span class="toggle-label">显示隐藏文件</span>
+                </div>
+            </div>
+            <div class="folder-info" id="folderInfo" style="display: none;">
+                <div class="current-path" id="currentPath"></div>
+                <div class="file-list" id="folderContent"></div>
+            </div>
+        </div>
         
-        <div class="button-group">
-            <button id="readFileBtn">读取文件</button>
-            <button id="saveAsFileBtn">另存为</button>
-            <button id="openFolderBtn">打开文件夹</button>
-        </div>
+        <div class="main-content">
+            <div class="container">
+                <h2>本地文件读写示例</h2>
+                
+                <div class="button-group">
+                    <button id="readFileBtn">读取文件</button>
+                    <button id="saveAsFileBtn">另存为</button>
+                </div>
 
-        <div class="file-info" id="fileInfo">
-            未选择文件
-        </div>
+                <div class="file-info" id="fileInfo">
+                    未选择文件
+                </div>
 
-        <div class="folder-info" id="folderInfo" style="display: none;">
-            <h3>文件夹内容：</h3>
-            <div id="folderContent"></div>
+                <textarea id="fileContent" placeholder="文件内容将显示在这里..."></textarea>
+            </div>
         </div>
-
-        <textarea id="fileContent" placeholder="文件内容将显示在这里..."></textarea>
     </div>
 
     <!-- Toast提示容器 -->
