更新文件保存功能，重命名按钮并整合文件读取逻辑，提升用户交互体验。

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>本地文件读写示例</h2>
                 
                 <div class="button-group">
-                    <button id="readFileBtn">读取文件</button>
+                    <button id="saveFileBtn">保存</button>
                     <button id="saveAsFileBtn">另存为</button>
                 </div>
 
