优化样式和提示信息，调整侧边栏和文件列表布局，新增按钮提示功能，提升用户交互体验。

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                     未选择文件
                 </div>
 
+                <div class="tips-container">
+                    <div class="button-tip" id="saveFileTip"></div>
+                    <div class="button-tip" id="saveAsFileTip"></div>
+                    <div class="button-tip" id="openFileTip"></div>
+                </div>
+
                 <textarea id="fileContent" placeholder="文件内容将显示在这里..."></textarea>
             </div>
         </div>
