新增文件列表头部样式，优化文件列表布局，调整最大高度以提升用户体验。

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             </div>
             <div class="folder-info" id="folderInfo" style="display: none;">
                 <div class="current-path" id="currentPath"></div>
+                <div class="file-list-header">
+                    <span class="file-name">文件名</span>
+                    <span class="file-size">大小</span>
+                    <span class="file-date">修改时间</span>
+                </div>
                 <div class="file-list" id="folderContent"></div>
             </div>
         </div>
